re PR target/26775 (a stack pointer is not recovered correctly when using alloca.)

PR target/26775
PR target/26776
* config/m32r/m32r.c (m32r_output_function_epilogue): Case for a large 
  stack frame at epilogue. Use fp to recover a stack pointer for alloca 
  function at epilogue.

From-SVN: r112659